[gd_scene load_steps=6 format=3 uid="uid://crh5www7u7165"]

[ext_resource type="Script" path="res://Transitionscreens/select_screen.gd" id="1_7vmlp"]
[ext_resource type="Texture2D" uid="uid://bp8qmo0rpirkc" path="res://pictures/new-BG/select_screen.png" id="2_8024w"]
[ext_resource type="Texture2D" uid="uid://d4f6cxa80vsko" path="res://pictures/new_Buttons/fall_button.png" id="3_7r7b5"]
[ext_resource type="Texture2D" uid="uid://exotx7njlo4y" path="res://pictures/new_Buttons/tutorial_button.png" id="4_pfei0"]
[ext_resource type="Texture2D" uid="uid://53twtx27s2er" path="res://pictures/new_Buttons/einstellungen_button.png" id="5_vxd62"]

[node name="Select_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vmlp")
metadata/_edit_vertical_guides_ = [1922.0]

[node name="SelectScreen" type="Sprite2D" parent="."]
position = Vector2(1923, 1070)
scale = Vector2(0.968791, 0.968341)
texture = ExtResource("2_8024w")

[node name="FallButton" type="Sprite2D" parent="."]
position = Vector2(1922, 605)
scale = Vector2(0.375754, 0.375754)
texture = ExtResource("3_7r7b5")

[node name="cases_botton" type="TextureButton" parent="FallButton"]
anchors_preset = -1
anchor_left = 0.502
anchor_top = 0.262
anchor_right = 0.502
anchor_bottom = 0.262
offset_left = -4008.65
offset_top = -631.582
offset_right = -2456.65
offset_bottom = -310.582

[node name="TutorialButton" type="Sprite2D" parent="."]
position = Vector2(1922, 1083)
scale = Vector2(0.376, 0.376)
texture = ExtResource("4_pfei0")

[node name="tutorial_button" type="TextureButton" parent="TutorialButton"]
anchors_preset = -1
anchor_left = 0.502
anchor_top = 0.444
anchor_right = 0.502
anchor_bottom = 0.444
offset_left = -4015.07
offset_top = -781.23
offset_right = -2464.07
offset_bottom = -459.23

[node name="EinstellungenButton" type="Sprite2D" parent="."]
position = Vector2(1922, 1564)
scale = Vector2(0.376, 0.376)
texture = ExtResource("5_vxd62")

[node name="settings_button" type="TextureButton" parent="EinstellungenButton"]
anchors_preset = -1
anchor_left = 0.503
anchor_top = 0.657
anchor_right = 0.503
anchor_bottom = 0.657
offset_left = -4013.91
offset_top = -957.102
offset_right = -2460.91
offset_bottom = -637.102

[connection signal="pressed" from="FallButton/cases_botton" to="." method="_on_cases_botton_pressed"]
[connection signal="pressed" from="TutorialButton/tutorial_button" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="EinstellungenButton/settings_button" to="." method="_on_settings_button_pressed"]
